# cyber_llm

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  RAG_INTEGRATION_GUIDE.md  README.md  README_TRENDYOL.md  SETUP_AND_FIXES.md  UPLOAD_SUMMARY.md  create_comprehensive_data.py  create_llm_security_data.py  create_training_data.py  data_preprocessing.py  dataset_prompts_complete_list.txt  deploy_verify.sh  docker-compose-trendyol.yml  docker-compose.yml  extract_prompts.py  integrate_cve_intelligence.py  integrate_trendyol_dataset.py  prepare_llm_dataset.py  process_complete_nvd_dataset.py  pyproject.toml  rag_web_integration.py  requirements.txt  requirements_rag.txt  setup.py  start.sh  start_complete_nvd_system.sh  start_enhanced.sh  start_ethical.sh  start_rag_system.sh  start_trendyol.sh  stop.sh  system_status_report.py  test_system.sh  train.py  train_simple.py  (+1 more)
.github/workflows/: ci-cd.yml
Backend/: CVE_ANALYZER_ERRORS_AND_SOLUTIONS.md  Dockerfile  Dockerfile.trendyol  cve_logic.py  llm_cve_analyzer.py  main.py  main_complete_nvd.py  main_cve_enhanced.py  main_enhanced.py  main_ethical.py  main_trendyol.py  minimal_backend.py  requirements.txt  simple_cve_backend.py
Frontend/: CHATBOT_ERRORS_AND_SOLUTIONS.md  Dockerfile  Dockerfile.trendyol  chatbot_app.py  cve_logic.py  requirements.txt  streamlit_app.py  streamlit_app_complete_nvd.py  streamlit_app_cve_enhanced.py  streamlit_app_simple_fast.py  streamlitapp.py
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py
backend/api/endpoints/: __init__.py  auth.py  chat.py  tools.py  voice.py
backend/api/middleware/: __init__.py  logging.py  rate_limit.py
backend/llm/: __init__.py  manager.py
backend/rag/: __init__.py  retrieval.py
backend/tools/: __init__.py
backend/tools/exploitation/: __init__.py  payload_generator.py
backend/tools/reporting/: __init__.py  report_generator.py
backend/tools/scanning/: __init__.py  nmap_scanner.py  nuclei_scanner.py
backend/voice/: __init__.py
backend/voice/recognition/: __init__.py  speech_processor.py
backend/voice/synthesis/: __init__.py  tts_engine.py
configs/: default.yaml  example.env
data/: bug_bounty_reports.csv  comprehensive_test_dataset.json  comprehensive_train_dataset.json  detailed_cve_database.json  enhanced_ethical_hacker_training.json  nvd_processing_report.md  nvd_processing_statistics.json  test_dataset.json  train_dataset.json  trendyol_cve_enhanced_training.json  trendyol_integrated_training.json
data/llm_training/: cybersecurity_expert_training.json  dataset_metadata.json  train.json  validation.json
docker/: nginx.conf
docs/: README.md  ethical-usage.md
docs/attack-vectors/: README.md
docs/best-practices/: README.md
docs/case-studies/: README.md
docs/defense-strategies/: README.md
examples/: basic_example.py
frontend/streamlit_app/: app.py
model/comprehensive-ethical-hacker-llm-v2/: model_info.json  training_log.json
model/enhanced-ethical-hacker-llm-v3/: model_info.json
model/ethical-hacker-llm-v1/: model_info.json  training_log.json
model/trendyol-enhanced-ethical-hacker-llm-v4/: model_info.json
scripts/: deploy.sh  setup.sh  start.sh  test_installation.py
src/cyber_llm/: __init__.py  cli.py  server.py  testing.py
src/cyber_llm/attacks/: __init__.py  adversarial_prompts.py  chain_of_thought.py  context_window.py  data_extraction.py  jailbreaking.py  multi_turn.py  prompt_injection.py  role_playing.py  social_engineering.py
src/cyber_llm/defenses/: __init__.py  constitutional_ai.py  input_sanitization.py  output_filtering.py  rate_limiting.py  red_teaming.py  safety_monitoring.py
src/cyber_llm/monitoring/: __init__.py  anomaly_detector.py  incident_response.py  security_logger.py  threat_intelligence.py
src/cyber_llm/utils/: __init__.py  config.py  crypto_utils.py  (+3 more)
tests/: test_basic.py
